# crypto-trading-drl

./: .gitignore  README.md  TRAINING_READY.md  __init__.py  crypto_data_downloader.py  crypto_data_downloader_v2.py  pyproject.toml  requirements.txt  setup.cfg  setup_dev_env.py  test_data_fetcher.py  test_indicators.py  test_neural_networks.py  test_shared_src.py  test_system.py  test_technical_indicators.py  test_trading_env.py  test_training_imports.py  train_solana_agent.py  train_solana_minimal.py  training-report-1-fast-200.md  view_crypto_data.py
crypto-trading-drl-btc/: train_bitcoin_agent.py
crypto-trading-drl-btc/data/: btc_training_data.csv
crypto-trading-drl-eth/: ETH_README.md  ETH_analyze_results.py  ETH_diagnose_model.py  ETH_requirements.txt  ETH_test_data_fetcher.py  backtest_ethereum_agent.py  train_ethereum_agent.py
crypto-trading-drl-eth-final/: ETH_BACKTEST_RESULTS.md  ETH_FULL_TRAINING_STATUS.md  ETH_TRAINING_RESULTS.md  ETH_backtest_fixed.py  ETH_test_neural_networks.py  ETH_test_system.py  ETH_test_trading_env.py  train_ethereum_agent.py
crypto-trading-drl-eth-final/full_training_results/: training_metrics.json
crypto-trading-drl-eth-final/src/: __init__.py  technical_indicators.py
crypto-trading-drl-eth/src/: data_fetcher.py  neural_networks.py  trading_env.py
crypto-trading-drl-sol/: SOL_FULL_TRAINING_STATUS.md  SOL_README.md  SOL_TRAINING_SPEED_GUIDE.md  SOL_requirements.txt  backtest_full_training.py  backtest_solana_agent.py  train_solana_agent.py  train_solana_fast.py
crypto-trading-drl-sol/full_training_results/: btc_best_model.pth  btc_complete_training_results.csv  (+19 more)
data/: BTC_6year_data.csv  ETH_6year_data.csv  SOL_6year_data.csv
fast_training_results/: training_metrics.json
full_training_results/: training_metrics.json
minimal_training_results/: training_metrics.json
reduced_training_results/: btc_complete_training_results_reduced.csv  btc_training_progress_episode_25_reduced.csv  btc_training_progress_episode_50_reduced.csv  btc_training_progress_episode_75_reduced.csv
src/: data_fetcher.py  neural_networks.py  technical_indicators.py
(+3 files in other folders)
