[metadata]
name = crypto-trading-drl
version = 1.0.0
author = Alz-Android
description = Deep Reinforcement Learning Cryptocurrency Trading System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alz-Android/crypto-trading-drl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include = src*, crypto-trading-drl-*

[tool:pytest]
python_paths = src
testpaths = .
python_files = test_*.py
python_classes = Test*
python_functions = test_*